--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,10 +18,11 @@ find_package(octomap REQUIRED)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
 
 add_library(${PROJECT_NAME} SHARED 
-#src/LocalMapping.cc
+src/LocalMapping.cc
 src/ParameterServer.cc
-#src/Viewer.cc
+src/Viewer.cc
 src/ColorOctreeServer.cc
+src/ColorOctomap.cc
 )
 
 include_directories(
@@ -41,8 +42,8 @@ ${OCTOMAP_LIBRARIES}
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
 
-#add_executable(color_octree_viewer src/main.cc)
-#target_link_libraries(color_octree_viewer ${PROJECT_NAME})
+add_executable(color_octree_viewer src/main.cc)
+target_link_libraries(color_octree_viewer ${PROJECT_NAME})
 
 add_executable(octree_direct_viewer src/direct.cc)
 target_link_libraries(octree_direct_viewer ${PROJECT_NAME})
